chore: config profiles, infrastructure app